# blackjack

./: Cargo.toml  Dockerfile
core/: Cargo.toml
core/src/: auth_types.rs  errors.rs  lib.rs  sdk.rs  vault_types.rs
src/: main.rs
ui/: app.js  index.html  style.css
