[package]
name = "core_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
